fixed missing background color

--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,6 +1,4 @@
 .container {
-    height: 100%;
-    width: 100%;
     background-color: #ffe2cc;
 }
 
